feat(auth/audit): adopt Jackson JSON, use factories, and harden audit logging
Replace manual JSON with Jackson (JavaTimeModule, ISO-8601)
Use ProcessingActivity factories (LOGIN, DATA_EXPORT, DATA_DELETION)
Fix DATA_EXPORT assignment bug in basic overload (prevents NPE)
Skip logging on null userId; align activityType validation with tests
Preserve Redis storage/indexing and 7-year TTL; keep sorting by timestamp